syntax = "proto3";

option go_package = "github.com/flynn-nrg/izpi/internal/proto/discovery;discovery";

package discovery;

enum WorkerStatus {
  WORKER_STATUS_UNSPECIFIED = 0;
  FREE = 1;
  ALLOCATED = 2;
  BUSY_RENDER_SETUP = 3;
  BUSY_RENDERING = 4;
  BUSY_OTHER = 5;
  OFFLINE = 6;
}

enum Endianness {
  UNKNOWN_ENDIAN = 0;
  LITTLE_ENDIAN = 1;
  BIG_ENDIAN = 2;
}

message QueryWorkerStatusRequest {
}

message QueryWorkerStatusResponse {
  string node_name = 1;
  uint32 available_cores = 2;
  uint64 total_memory_bytes = 3;
  uint64 free_memory_bytes = 4;
  WorkerStatus status = 5;
  Endianness endianness = 6;
}

service WorkerDiscoveryService {
    rpc QueryWorkerStatus (QueryWorkerStatusRequest) returns (QueryWorkerStatusResponse);
}
